[package]
name = "software1-checker"
description = "A test runner for the software 1 course"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/noamzaks/software1-checker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
