[package]
name = "software1-checker"
description = "A test runner for the software 1 course"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/noamzaks/software1-checker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"
reqwest = { version = "0.11.12", features = ["blocking"] }
loading = "0.3.0"
